--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <div class="matrix-picture-block">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-wrapper">
+      <p id="add-task-section">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-input-block">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
