--- a/index.html
+++ b/index.html
@@ -7,47 +7,47 @@
   </head>
   <body>
     <div class="matrix-picture-block">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="matrix-picture" src="./eisenhower-matrix.jpg">
       <a class="details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-wrapper">
       <p id="add-task-section">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="add-item-label">Add Item</label>
         <div class="task-input-block">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task"class="task new-task-input" type="text">
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="title">Todo</h3>
+      <ul id="incomplete-tasks" class="list">
+        <li class="list-item">
+          <input type="checkbox" class="input-checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input type="text" class="task input-task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="delete-image" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+        <li class="edit-mode list-item">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task edit-mode-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="delete-image" src="./remove.svg">
           </button>
         </li>
         </ul>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
+        <h3 class="title">Completed</h3>
+        <ul id="completed-tasks" class="list">
+          <li class="list-item">
+            <input type="checkbox" class="input-checkbox" checked>
+            <label class="task completed-task-label">See the Doctor</label>
+            <input type="text" class="task input-task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img class="delete-image" src="./remove.svg">
             </button>
         </li>
       </ul>
