refactor: correct semantics according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <a class="details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-wrapper">
-      <p id="add-task-section">
+      <div id="add-task-section">
         <label for="new-task" class="add-item-label">Add Item</label>
         <div class="task-input-block">
           <input id="new-task"class="task new-task-input" type="text">
           <button>Add</button>
         </div>
-      </p>
+      </div>
       <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks" class="list">
         <li class="list-item">
