refactor: add alt text to media according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="matrix-picture-block">
-      <img class="matrix-picture" src="./eisenhower-matrix.jpg">
+      <img class="matrix-picture" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-wrapper">
@@ -26,7 +26,7 @@
           <input type="text" class="task input-task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img class="delete-image" src="./remove.svg">
+            <img class="delete-image" alt="delete-image" src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode list-item">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="task input-task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img class="delete-image" src="./remove.svg">
+            <img class="delete-image" alt="delete-image" src="./remove.svg">
           </button>
         </li>
         </ul>
@@ -47,7 +47,7 @@
             <input type="text" class="task input-task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img class="delete-image" src="./remove.svg">
+              <img class="delete-image" alt="delete-image" src="./remove.svg">
             </button>
         </li>
       </ul>
