--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <div class="matrix-picture__block">
-      <img class="matrix-picture" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main__wrapper">
-      <div id="add-task__section">
-        <label for="new-task" class="add-item-label">Add Item</label>
-        <div class="task-input__block">
-          <input id="new-task"class="task new-task-input" type="text">
-          <button>Add</button>
+  <body class="body">
+    <header class="header">
+      <img class="header-image" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
+      <section class="tasks tasks__add">
+        <h3 class="section-title section-title__add">Add Item</h3>
+        <div class="task-row-wrapper">
+          <input class="input input-new-task input__checkbox" type="text">
+          <button class="button">Add</button>
         </div>
-      </div>
-      <h3 class="title">Todo</h3>
-      <ul id="incomplete-tasks" class="list">
-        <li class="list__item">
-          <input type="checkbox" class="input-checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task input-task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img class="delete-image" alt="delete-image" src="./remove.svg">
-          </button>
-        </li>
-        <li class="edit-mode list__item">
-          <input type="checkbox" class="input-checkbox">
-          <label class="task edit-mode-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input-task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img class="delete-image" alt="delete-image" src="./remove.svg">
-          </button>
-        </li>
-        </ul>
-        <h3 class="title">Completed</h3>
-        <ul id="completed-tasks" class="list">
-          <li class="list__item">
-            <input type="checkbox" class="input-checkbox" checked>
-            <label class="task completed-task-label">See the Doctor</label>
-            <input type="text" class="task input-task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img class="delete-image" alt="delete-image" src="./remove.svg">
+      </section>
+      <section class="tasks">
+        <h3 class="section-title">Todo</h3>
+        <ul class="tasks-list task-list__actual">
+          <li class="tasks-list-item">
+            <input class="input input__checkbox" type="checkbox">
+            <label class="label">Pay Bills</label>
+            <input type="text" class="input input-text">
+            <button class="button button__edit">Edit</button>
+            <button class="button button__delete">
+              <img class="button-delete-img" src="./remove.svg" alt="delete-button">
             </button>
-        </li>
-      </ul>
-    </div>
+          </li>
+          <li class="tasks-list-item edit__mode">
+            <input class="input input__checkbox" type="checkbox">
+            <label class="label">Go Shopping</label>
+            <input type="text" class="input input-text" value="Go Shopping">
+            <button class="button button__edit">Save</button>
+            <button class="button button__delete">
+              <img class="button-delete-img" src="./remove.svg" alt="delete-button">
+            </button>
+          </li>
+        </ul>
+        <h3 class="section-title">Completed</h3>
+        <ul class="tasks-list tasks-list__completed">
+          <li class="tasks-list-item">
+            <input class="input input__checkbox" type="checkbox" checked>
+            <label class="label">See the Doctor</label>
+            <input type="text" class="input input-text">
+            <button class="button button__edit">Edit</button>
+            <button class="button button__delete">
+              <img class="button-delete-img" src="./remove.svg" alt="delete-button">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
